# Extracker

./: .gitignore  README.md  bot.py  database.py  llm.py  main.py  pyproject.toml  render.yaml  run_bot.py  run_web.py  supervisord.conf  web.py
static/css/: styles.css
static/js/: app.js
templates/: index.html  login.html
