[tool.poetry]
name = "expense-tracker-bot"
version = "0.1.0"
description = "Telegram bot for expense tracking with natural language processing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.8"
python-dotenv = "^1.0.0"
openai = "^1.12.0"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
SQLAlchemy = "^2.0.27"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 